--- a/.github/workflows/gobuild.yml
+++ b/.github/workflows/gobuild.yml
@@ -28,7 +28,7 @@ jobs:
           fetch-depth: 0 # Fetch all history so diffs can be performed
 
       - name: Setup Go
-        uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v6.1.0
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
           cache: true
