--- a/entgo-sveltekit/template/package.json
+++ b/entgo-sveltekit/template/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@8.15.9",
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build",
+    "build": "svelte-kit sync && vite build",
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,10 +14,12 @@
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.10",
     "@sveltejs/kit": "^2.49.2",
+    "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "@typescript-eslint/eslint-plugin": "^8.50.1",
 		"@typescript-eslint/parser": "^8.50.1",
 		"eslint": "^9.39.2",
 		"eslint-plugin-svelte": "^2.46.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "postcss-load-config": "^6.0.1",
