--- a/sveltekit-embed/template/package.json
+++ b/sveltekit-embed/template/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@8.15.9",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "svelte-kit sync && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,9 +14,10 @@
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.6.12",
-		"@skeletonlabs/skeleton": "^4.8.0",
-		"@sveltejs/adapter-static": "^3.0.10",
-		"@sveltejs/kit": "^2.49.2",
+		"@skeletonlabs/skeleton": "^1.12.0",
+		"@sveltejs/adapter-static": "^3.0.6",
+		"@sveltejs/kit": "^2.5.24",
+		"@sveltejs/vite-plugin-svelte": "^3.1.2",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@typescript-eslint/eslint-plugin": "^8.50.1",
@@ -27,14 +28,14 @@
 		"eslint-plugin-svelte": "^2.46.0",
 		"highlight.js": "^11.10.0",
 		"postcss": "^8.4.49",
-		"prettier": "^2.8.8",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^5.46.0",
-		"svelte-check": "^4.3.5",
-		"tailwindcss": "^4.1.18",
+		"prettier": "^3.3.3",
+		"prettier-plugin-svelte": "^3.2.6",
+		"svelte": "^4.2.19",
+		"svelte-check": "^3.8.6",
+		"tailwindcss": "^3.4.10",
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
-		"vite": "^7.3.0"
+		"vite": "^5.4.3"
 	},
 	"type": "module"
 }
